Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL)
Description
|
10.6 1bd4115841 |
mariadbd: /data/src/10.6-bug/storage/innobase/lock/lock0lock.cc:544: bool wsrep_is_BF_lock_timeout(const trx_t&): Assertion `trx.is_wsrep()' failed.
|
210401 3:46:49 [ERROR] mysqld got signal 6 ;
|
|
|
#7 0x00007fcbb91e5f36 in __GI___assert_fail (assertion=0x563a08f07bc7 "trx.is_wsrep()", file=0x563a08f07430 "/data/src/10.6-bug/storage/innobase/lock/lock0lock.cc", line=544, function=0x563a08f07bd8 "bool wsrep_is_BF_lock_timeout(const trx_t&)") at assert.c:101
|
#8 0x0000563a086c1212 in wsrep_is_BF_lock_timeout (trx=...) at /data/src/10.6-bug/storage/innobase/lock/lock0lock.cc:544
|
#9 0x0000563a086c5977 in lock_wait (thr=0x7fcb70027470) at /data/src/10.6-bug/storage/innobase/lock/lock0lock.cc:1803
|
#10 0x0000563a087d067b in row_mysql_handle_errors (new_err=0x7fcbae4ce768, trx=0x7fcbb403c3d8, thr=0x7fcb70027470, savept=0x0) at /data/src/10.6-bug/storage/innobase/row/row0mysql.cc:743
|
#11 0x0000563a0881d135 in row_search_mvcc (buf=0x7fcb70021918 "\377", mode=PAGE_CUR_GE, prebuilt=0x7fcb70026ac8, match_mode=1, direction=0) at /data/src/10.6-bug/storage/innobase/row/row0sel.cc:5718
|
#12 0x0000563a0861c0c7 in ha_innobase::index_read (this=0x7fcb70022510, buf=0x7fcb70021918 "\377", key_ptr=0x7fcb74018060 "\002", key_len=4, find_flag=HA_READ_KEY_EXACT) at /data/src/10.6-bug/storage/innobase/handler/ha_innodb.cc:8626
|
#13 0x0000563a081b0ddc in handler::index_read_map (this=0x7fcb70022510, buf=0x7fcb70021918 "\377", key=0x7fcb74018060 "\002", keypart_map=1, find_flag=HA_READ_KEY_EXACT) at /data/src/10.6-bug/sql/handler.h:3852
|
#14 0x0000563a081a8c5d in handler::index_read_idx_map (this=0x7fcb70022510, buf=0x7fcb70021918 "\377", index=0, key=0x7fcb74018060 "\002", keypart_map=1, find_flag=HA_READ_KEY_EXACT) at /data/src/10.6-bug/sql/handler.cc:6409
|
#15 0x0000563a0819ec39 in handler::ha_index_read_idx_map (this=0x7fcb70022510, buf=0x7fcb70021918 "\377", index=0, key=0x7fcb74018060 "\002", keypart_map=1, find_flag=HA_READ_KEY_EXACT) at /data/src/10.6-bug/sql/handler.cc:3151
|
#16 0x0000563a07eb0848 in join_read_const (tab=0x7fcb74016d10) at /data/src/10.6-bug/sql/sql_select.cc:21353
|
#17 0x0000563a07eb02fe in join_read_const_table (thd=0x7fcb74000db8, tab=0x7fcb74016d10, pos=0x7fcb740172c8) at /data/src/10.6-bug/sql/sql_select.cc:21231
|
#18 0x0000563a07e84867 in make_join_statistics (join=0x7fcb74015de8, tables_list=..., keyuse_array=0x7fcb740160d8) at /data/src/10.6-bug/sql/sql_select.cc:5340
|
#19 0x0000563a07e79712 in JOIN::optimize_inner (this=0x7fcb74015de8) at /data/src/10.6-bug/sql/sql_select.cc:2258
|
#20 0x0000563a07e771ff in JOIN::optimize (this=0x7fcb74015de8) at /data/src/10.6-bug/sql/sql_select.cc:1630
|
#21 0x0000563a07e827ea in mysql_select (thd=0x7fcb74000db8, tables=0x7fcb74014420, fields=..., conds=0x7fcb74015368, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2148272640, result=0x7fcb74015dc0, unit=0x7fcb74004f90, select_lex=0x7fcb74013e10) at /data/src/10.6-bug/sql/sql_select.cc:4735
|
#22 0x0000563a07e72129 in handle_select (thd=0x7fcb74000db8, lex=0x7fcb74004ec8, result=0x7fcb74015dc0, setup_tables_done_option=0) at /data/src/10.6-bug/sql/sql_select.cc:419
|
#23 0x0000563a07e348fb in execute_sqlcom_select (thd=0x7fcb74000db8, all_tables=0x7fcb74014420) at /data/src/10.6-bug/sql/sql_parse.cc:6231
|
#24 0x0000563a07e2bb5b in mysql_execute_command (thd=0x7fcb74000db8) at /data/src/10.6-bug/sql/sql_parse.cc:3927
|
#25 0x0000563a07e39746 in mysql_parse (thd=0x7fcb74000db8, rawbuf=0x7fcb74013d50 "select * from t1 where a = 2 and b = 2 for update", length=49, parser_state=0x7fcbae4d0510) at /data/src/10.6-bug/sql/sql_parse.cc:8004
|
#26 0x0000563a07e25b6c in dispatch_command (command=COM_QUERY, thd=0x7fcb74000db8, packet=0x7fcb7400b469 "select * from t1 where a = 2 and b = 2 for update", packet_length=49, blocking=true) at /data/src/10.6-bug/sql/sql_parse.cc:1888
|
#27 0x0000563a07e24513 in do_command (thd=0x7fcb74000db8, blocking=true) at /data/src/10.6-bug/sql/sql_parse.cc:1399
|
#28 0x0000563a07fd2e7a in do_handle_one_connection (connect=0x563a0ba4d3f8, put_in_cache=true) at /data/src/10.6-bug/sql/sql_connect.cc:1410
|
#29 0x0000563a07fd2bd6 in handle_one_connection (arg=0x563a0bb30fe8) at /data/src/10.6-bug/sql/sql_connect.cc:1312
|
#30 0x0000563a085331ff in pfs_spawn_thread (arg=0x563a0bb27cd8) at /data/src/10.6-bug/storage/perfschema/pfs.cc:2201
|
#31 0x00007fcbb96fd609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#32 0x00007fcbb92d1293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Reproducible, for example, by running innodb.innodb test (the above failure), and many others.
The failure appeared in 10.6 with this (latest at the moment) commit:
commit 1bd4115841ecded24217e5d753ed4d9822b4cffd (HEAD -> 10.6, origin/HEAD, origin/10.6)
|
Author: Marko Mäkelä
|
Date: Wed Mar 31 22:15:54 2021 +0300
|
|
|
After-merge fix: WITH_WSREP=ON CMAKE_BUILD_TYPE=RelWithDebInfo
|
|
Merge commit 176aaf93d1e7c256bb413931c5baa361b856a7de
|
accidentally broke the WITH_WSREP release build.
|