MDEV-25314 Assertion `trx.is_wsrep()' failed in wsrep_is_BF_lock_timeout()

In commit 1bd4115841ecded24217e5d753ed4d9822b4cffd the intention
was to move the trx_t::is_wsrep() check to the caller of the function
wsrep_is_BF_lock_timeout().